--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@
 *.fls
 *.bcf
 *.pyg
+.tags
+.tag
 
 # git-ls-files --others --exclude-from=.git/info/exclude
 # Lines that start with '#' are comments.
